<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/forestbg">


    <TextView
        android:id="@+id/tvOrdatBliveGættet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gæt"
        android:textColor="@color/skrift"
        android:textSize="20sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.609" />

    <EditText
        android:id="@+id/etInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@color/skrift"
        android:backgroundTint="@color/skrift"
        android:inputType="text"
        android:importantForAutofill="no"
        android:textColor="@color/skrift"
        android:hint="@string/skriv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOrdatBliveGættet"
        app:layout_constraintVertical_bias="0.149" />



    <TextView
        android:id="@+id/tvForsøgteBogstaver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/skrift"
        android:text="@string/forsøgt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etInput"
        android:textStyle="bold"
        android:textSize="16sp"

        />


    <TextView
        android:id="@+id/tvLivTilbage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/livTilbage"
        android:textColor="@color/skrift"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForsøgteBogstaver" />

    <Button
        android:id="@+id/genstartKnap"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button"
        android:text="@string/forfraKnap"
        android:onClick="genstartSpil"
        android:textColor="@color/skrift"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLivTilbage" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:textSize="30sp"
        android:textColor="@color/skrift"
        android:textStyle="bold"
        android:text="@string/titel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>




